# salary-calculator-be

./: Cargo.toml  README.md  tax_rates.db
src/: db.rs  db_backup.rs  main.rs  utils.rs
src/database/: db.rs  db_backup.rs  mod.rs
src/models/: calculations.rs
src/routes/: calculations.rs  health.rs  mod.rs  taxes.rs
src/services/: calculations.rs
src/validators/: calculations.rs
tests/: common.rs  test_calculate.rs  test_calculations.rs  test_taxes.rs
