[package]
name = "calven"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.118"
rusqlite = "0.31.0"
chrono = "0.4.38"

[dev-dependencies]
anyhow = "1.0.86"
cargo-watch = "8.5.2"
httpc-test = "0.1.9"
